# dailymotion

./: .env.example  .gitignore  Dockerfile  INSTRUCTIONS.md  README.md  architecture.mmd  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: test_api.yml
app/: api.py  config.py  constants.py  db.py  main.py  models.py  schema.py  utils.py
src/: api.py  config.py  constants.py  helpers.py  logging.py  main.py  models.py
src/jobs/: cleanup_unverified.py
src/services/: auth.py  cache.py  email.py  security.py
src/services/db/: __init__.py  schema.py
tests/: conftest.py  test_api.py  test_jobs.py
